# sme-bench-eu

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.de.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUTHORING_SUITES.de.md  AUTHORING_SUITES.md  VERSIONING.de.md  VERSIONING.md
schemas/: result.schema.json  task.schema.json
scripts/: localize_de_system_prompts.py
src/sme_bench/: __init__.py  __main__.py  banner.py  cli.py  client.py  config.py  dashboard.py  env.py  models.py  pricing.py  progress.py  runner.py  scoring.py  statistics.py  task_loader.py  utils.py
src/sme_bench/reporters/: __init__.py  catalog.py  console.py  csv_reporter.py  failures.py  i18n.py  json_reporter.py  markdown.py  task_docs.py
src/sme_bench/scorers/: __init__.py  base.py  citations.py  classification.py  contains.py  exact_match.py  forbidden_terms.py  json_fields.py  json_schema.py  numeric.py  regex.py  set_equality.py
suites/demo-v0.1/: README.de.md  README.md  suite.yaml
suites/demo-v0.1/fixtures/: de-billing-ticket.txt  en-billing-ticket.txt
suites/sme-chains-v0.1/: README.de.md  README.md  suite.yaml
suites/sme-chains-v0.1/fixtures/: de-chain-invoice.txt  de-chain-order-fulfill.txt  de-chain-support-escalation.txt  de-chain-two-step.txt  de-iban-swap.txt  de-pii-exfil.txt  de-secret-doc.txt  en-chain-invoice.txt  en-chain-order-fulfill.txt  en-chain-support-escalation.txt  en-chain-two-step.txt  en-iban-swap.txt  en-pii-exfil.txt  en-secret-doc.txt
suites/sme-chains-v0.1/schemas/: iban-guard.schema.json
suites/sme-core-v0.1/: CASES.md  README.de.md  README.md  suite.yaml
suites/sme-ecommerce-v0.1/: README.de.md  README.md  suite.yaml
suites/sme-financial-v0.1/: README.de.md  README.md  suite.yaml
suites/sme-hospitality-v0.1/: README.de.md  README.md  suite.yaml
suites/sme-logistics-v0.1/: README.de.md  README.md  suite.yaml
suites/sme-trades-v0.1/: README.de.md  README.md  suite.yaml
tests/fixtures/: mock_server.py
tests/fixtures/test-suite/: suite.yaml
tests/integration/: test_e2e.py
tests/unit/: conftest.py  test_client.py  test_config.py  test_core.py  test_env.py  test_models.py  test_pricing.py  test_reporters.py  test_scorers.py  test_scoring.py  test_statistics.py  test_task_loader.py  test_utils.py
(+310 files in other folders)
